Update removed links that lead to site load in channel, privacy policy and impressum; added opening privacy policy link to register tap

--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -65,8 +65,8 @@
                     <h3># {{ channelService.selectedChannel.channelName }}</h3>
                 </div>
                 <div class="channel-text">
-                    Das ist der Anfang des Channels <a href="#"># {{ channelService.selectedChannel.channelName
-                        }}</a>
+                    Das ist der Anfang des Channels # {{ channelService.selectedChannel.channelName
+                        }}
                 </div>
             </div>
         </ng-template>
