--- a/src/app/startscreen/imprint/imprint.component.html
+++ b/src/app/startscreen/imprint/imprint.component.html
@@ -1,5 +1,5 @@
 <mat-card class="impressum-container">
-  <a (click)="closeImprint()" class="user-uper-icon-title" href="/">
+  <a (click)="closeImprint()" class="user-uper-icon-title">
     <img src="./assets/img/icons/arrow_left_back.svg" />
   </a>
   <div class="impressum-box">
