--- a/src/app/startscreen/privacy-policy/privacy-policy.component.html
+++ b/src/app/startscreen/privacy-policy/privacy-policy.component.html
@@ -1,6 +1,6 @@
 <mat-card class="privacy-container">
  
-  <a (click)="closePrivacyPolicy()" class="user-uper-icon-title" href="/">
+  <a (click)="closePrivacyPolicy()" class="user-uper-icon-title">
     <img src="./assets/img/icons/arrow_left_back.svg" />
   </a>
   <h1>Datenschutz&shy;erkl&auml;rung</h1>
