--- a/documentation/components/ForgotPasswordComponent.html
+++ b/documentation/components/ForgotPasswordComponent.html
@@ -735,7 +735,7 @@ export class ForgotPasswordComponent {
         }, 1400);
       })
       .catch((error) &#x3D;&gt; {
-        console.log(error.message);
+        console.error(error.message);
       });
   }
 
