--- a/documentation/components/UserProfilComponent.html
+++ b/documentation/components/UserProfilComponent.html
@@ -1206,7 +1206,7 @@ export class UserProfilComponent implements OnInit {
         this.user.status &#x3D; result;
       })
       .catch((error) &#x3D;&gt; {
-        console.log(error);
+        console.error(error);
       });
   }
 
