Pw valid text pdate & bugfix message edit in private chat

--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -49,6 +49,7 @@ $headerUser-width: 25%;
             img {
                 width: 50px;
                 border-radius: 50%;
+                object-fit: cover;
             }
 
             #header-status {
