--- a/src/app/startscreen/register/register.component.html
+++ b/src/app/startscreen/register/register.component.html
@@ -172,7 +172,7 @@
           [ngClass]="{ 'warning-password': true }"
         >
           {{
-            "*Gültiges Passwort mit mindestens 6 Zeichen , einem Großbuchstaben und einem Sonderzeichen eingeben."
+            "*Gültiges Passwort mit mindestens 8 Zeichen, einem Großbuchstaben, einem Kleinbuchstaben und einem Sonderzeichen eingeben."
           }}
         </span>
       </div>
