--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -48,6 +48,7 @@ $headerUser-width: 25%;
 
             img {
                 width: 50px;
+                height: 50px;
                 border-radius: 50%;
                 object-fit: cover;
             }
