--- a/src/app/mainscreen/user-profil/user-profil.component.scss
+++ b/src/app/mainscreen/user-profil/user-profil.component.scss
@@ -30,10 +30,12 @@
             min-width: 300px;
             display: flex;
             justify-content: center;
-
+            
             img {
-                width: 30%;
+                height: 150px;
+                width: 150px;
                 border-radius: 50%;
+                object-fit: cover;
             }
         }
 
