change style in mobil header responsiv

--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -256,6 +256,7 @@ $headerDropdownPositionRigth: 0px;
             #header-image-container-mobile-selected {
                 display: flex;
                 gap: 12px;
+                align-items: center;
 
                 img {
                     width: unset;
